# tool_calling

./: Cargo.toml  README.md
.github/workflows/: build_and_release.yaml  doc_tests.yaml  tests.yaml
examples/: async_example.rs  example.rs  ollama_example.rs  optional_arguments_example.rs  simple_example.rs
src/: lib.rs  ollama.rs
tests/: argument_handling.rs  basic_sync_async.rs  error_and_edge_cases.rs  registry.rs
tool_calling_derive/: Cargo.toml
tool_calling_derive/src/: lib.rs
tool_calling_macros/: Cargo.toml
tool_calling_macros/src/: lib.rs
