[package]
name = "tool_calling"
description = "Don't know yet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "license.md"
repository = "https://github.com/ljt019/tool_calling/"

[dependencies]
inventory = "0.3.20"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"

[dev-dependencies]
