[package]
name = "tool_calling"
description = "Don't know yet"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "license.md"
repository = "https://github.com/ljt019/tool_calling/"

[dependencies]
inventory = "0.3.20"
linkme = "0.3.32"
proc-macro2 = "1.0.95"
quote = "1.0.40"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.100"
tool_calling_derive = { path = "./tool_calling_derive" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
